# New

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  render.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260318_0001_init.py
apps/api/app/: main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: auth.py  chat.py  ws.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  chat.py  user.py
apps/api/app/repositories/: users.py
apps/api/app/schemas/: __init__.py  auth.py  chat.py
apps/api/app/services/: auth.py  chat.py
apps/api/app/websocket/: manager.py
apps/web/: Dockerfile  package.json  playwright.config.ts  tailwind.config.ts  tests.spec.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: chat-shell.tsx  message-list.tsx  providers.tsx  sidebar.tsx
apps/web/lib/: api.ts  auth.ts  crypto.test.ts  crypto.ts  next-auth.d.ts  types.ts  utils.ts
backend/: .env  .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  deps.py  friends.py  notifications.py  posts.py  users.py  ws.py
backend/app/core/: config.py  middleware.py  object_id.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: schemas.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.jsx  App.tsx  main.tsx  styles.css
(+34 files in other folders)
